:checkered_flag: Barra responsiva e background feitos

--- a/html/index.html
+++ b/html/index.html
@@ -4,24 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jogo envolvente de RPG">
-    <meta name="keywords" content="Jogo de RPG Zendar">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Matheus Brandão da Silva">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Raleway:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/icones/zapple.png  ">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/icones/z32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/icones/z16.png">
+    <link rel="manifest" href="../img/icones/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Montserrat:ital,wght@0,300;0,400;0,500;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Zendar</title>
 </head>
 
 <body>
-    <header class="cabecalho">
-        <h1>Silvana</h1>
-        <h2>Silvana</h2>
-        <h3>Silvana</h3>
-    </header>
+    <div class="hamburger">
 
+        <header class="cabess">
+            <input type="checkbox" id="btn-menu">
+            <label for="btn-menu">&#9776;</label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Raças</a></li>
+                    <li><a href="#">Loja</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="bg"><img class="bg" src="../img/bg/bg-1.jpg" title="Batalha contra o Rei Demônio" alt="Background"></div>
+    </div>
 </body>
 
 </html>
