:checkered_flag: home em andamento...

--- a/html/index.html
+++ b/html/index.html
@@ -11,13 +11,17 @@
     <link rel="manifest" href="../img/icones/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Montserrat:ital,wght@0,300;0,400;0,500;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
     <title>Zendar</title>
 </head>
 
 <body>
     <div class="hamburger">
+        <div class="home">
+            <h1>Emerja nesse mundo envolto de guerras</h1>
+        </div>
 
-        <header class="cabess">
+        <header class="cabess azul">
             <input type="checkbox" id="btn-menu">
             <label for="btn-menu">&#9776;</label>
             <nav class="menu">
@@ -27,6 +31,11 @@
                     <li><a href="#">Raças</a></li>
                     <li><a href="#">Loja</a></li>
                     <li><a href="#">Login</a></li>
+                    <div class="social">
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    </div>
                 </ul>
             </nav>
         </header>
